# garage

./: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig
build_slave/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_slave/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs_projbuild.in  project_description.json
build_slave/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_slave/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_slave/esp-idf/: cmake_install.cmake
build_slave/gdbinit/: gdbinit  symbols
build_slave/log/: idf_py_stderr_output_78630  idf_py_stderr_output_90058  idf_py_stdout_output_78630  idf_py_stdout_output_78982  idf_py_stdout_output_89643  idf_py_stdout_output_90058  idf_py_stdout_output_91072  idf_py_stdout_output_91194
main/: CMakeLists.txt  Kconfig.projbuild  app_video.c  ethernet.c  ethernet.h  flash_store.c  flash_store.h  flash_uploader.c  flash_uploader.h  main.c  mqtt_video.c  mqtt_video.h  video_packetizer.c  video_packetizer.h  video_streamer.c  video_streamer.h  wifi_sta.c  wifi_sta.h
tools/: docker-compose.yml  frames_to_video.py  mosquitto-1884.conf  mosquitto.conf  mqtt_cam_json_receiver.py  mqtt_cam_receiver.py  mqtt_cam_record_and_render.py  run_receiver_fps.sh
(+66 files in other folders)
